--- a/MauiApp-Demo/MainPage.xaml
+++ b/MauiApp-Demo/MainPage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp_Demo.MainPage">
+             x:Class="MauiApp_Demo.MainPage"
+             xmlns:viewmodel="clr-namespace:MauiApp_Demo.ViewModel"
+             x:DataType="viewmodel:MoviesViewModel">
 
     <!--<ScrollView>
         <VerticalStackLayout
@@ -41,8 +43,10 @@
     <Grid 
         ColumnDefinitions="*,*"
         ColumnSpacing="5"
-        BackgroundColor="AliceBlue" />
+        BackgroundColor="AliceBlue">
 
+        <Button Grid.Row="1" Text="GetMovies" Command="{Binding GetMoviesCommand}" />
 
+    </Grid>
 
 </ContentPage>
