--- a/MauiApp-Demo/MainPage.xaml
+++ b/MauiApp-Demo/MainPage.xaml
@@ -45,7 +45,7 @@
         ColumnSpacing="5"
         BackgroundColor="AliceBlue">
 
-        <Button Grid.Row="1" Text="GetMovies" Command="{Binding GetMoviesCommand}" />
+        <Button Grid.Row="1" Grid.Column="0" Text="GetMovies" Command="{Binding GetMoviesCommand}" IsEnabled="{Binding IsNotBusy}" />
 
     </Grid>
 
