--- a/MauiApp-Demo/MainPage.xaml
+++ b/MauiApp-Demo/MainPage.xaml
@@ -32,6 +32,8 @@
 
         <Button Grid.Row="1" Grid.Column="0" Text="GetMovies" Command="{Binding GetMoviesCommand}" IsEnabled="{Binding IsNotBusy}" WidthRequest="150" HeightRequest="50" CornerRadius="20" FontSize="Medium" Margin="10"/>
 
+        <ActivityIndicator Grid.RowSpan="2" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
+
     </Grid>
 
 </ContentPage>
