Activity indicator for load more data inside collection view footer

--- a/MauiApp-Demo/MainPage.xaml
+++ b/MauiApp-Demo/MainPage.xaml
@@ -36,6 +36,9 @@
                             </Grid>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
+                    <CollectionView.Footer>
+                        <ActivityIndicator Grid.RowSpan="2" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" IsRunning="{Binding IsLoading}" IsVisible="{Binding IsLoading}" />
+                    </CollectionView.Footer>
                 </CollectionView>
             </RefreshView>
         </StackLayout>
