--- a/MauiApp-Demo/MovieDetailsPage.xaml
+++ b/MauiApp-Demo/MovieDetailsPage.xaml
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp_Demo.MainPage"
+             x:Class="MauiApp_Demo.MovieDetailsPage"
              xmlns:model="clr-namespace:MauiApp_Demo.Models"
              xmlns:viewmodel="clr-namespace:MauiApp_Demo.ViewModel"
-             x:DataType="viewmodel:MoviesViewModel"
-             Title="Movies">
-
-    <Grid 
+             x:DataType="viewmodel:MovieDetailsViewModel"
+             Title="Movie Details">
+    <Label>Movie detail page</Label>
+    <!--<Grid 
         ColumnDefinitions="*"
         ColumnSpacing="5"
         RowDefinitions="*,Auto"
@@ -25,9 +25,6 @@
                         <DataTemplate x:DataType="model:Movie">
                             <Grid Margin="2">
                                 <Frame HeightRequest="125" HasShadow="True" CornerRadius="10" IsClippedToBounds="True" BorderColor="#DDDDDD">
-                                    <Frame.GestureRecognizers>
-                                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MoviesViewModel}}, Path=GoToDetailsCommand}" CommandParameter="{Binding .}" />
-                                    </Frame.GestureRecognizers>
                                     <Grid ColumnDefinitions="Auto,*" ColumnSpacing="5">
                                         <Image Grid.Column="0" WidthRequest="175" HeightRequest="175" Source="{Binding Poster}" Aspect="AspectFill" />
                                         <VerticalStackLayout Grid.Column="1">
@@ -50,6 +47,6 @@
 
         <ActivityIndicator Grid.RowSpan="2" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
 
-    </Grid>
+    </Grid>-->
 
 </ContentPage>
