--- a/MauiApp-Demo/MainPage.xaml
+++ b/MauiApp-Demo/MainPage.xaml
@@ -8,11 +8,11 @@
              Title="Movies">
 
     <Grid 
-        ColumnDefinitions="*"
+        ColumnDefinitions="*,*"
         ColumnSpacing="5"
         RowDefinitions="*,Auto"
         BackgroundColor="AliceBlue">
-        <StackLayout>
+        <StackLayout Grid.ColumnSpan="2">
             <SearchBar x:Name="searchBar" Placeholder="Search for movies" SearchCommand="{Binding GetSearchedMoviesCommand}" SearchCommandParameter="{Binding Text, Source={x:Reference searchBar}}" Margin="5" />
             <RefreshView Command="{Binding GetMoviesCommand}" IsRefreshing="{Binding IsRefreshing}" >
                 <CollectionView ItemsSource="{Binding Movies}" BackgroundColor="Transparent" SelectionMode="None" RemainingItemsThreshold="1" RemainingItemsThresholdReachedCommand="{Binding LoadMoreDataCommand}">
@@ -47,6 +47,7 @@
         </StackLayout>
 
         <Button Grid.Row="1" Grid.Column="0" Text="GetMovies" Command="{Binding GetMoviesCommand}" IsEnabled="{Binding IsNotBusy}" WidthRequest="150" HeightRequest="40" CornerRadius="20" FontSize="Small" Margin="10"/>
+        <Button Grid.Row="1" Grid.Column="1" Text="Favorites"  IsEnabled="{Binding IsNotBusy}" WidthRequest="150" HeightRequest="40" CornerRadius="20" FontSize="Small" Margin="10"/>
 
         <ActivityIndicator Grid.RowSpan="2" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
 
