--- a/MauiApp-Demo/MovieDetailsPage.xaml
+++ b/MauiApp-Demo/MovieDetailsPage.xaml
@@ -11,7 +11,7 @@
             <StackLayout>
                 <Grid ColumnDefinitions="*,*,Auto" RowDefinitions="*">
                     <Image Grid.ColumnSpan="3" Source="{Binding Movie.Poster}" MaximumHeightRequest="500" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Aspect="AspectFill" />
-                    <Button Grid.Column="2" Command="{Binding AddWatchListCommand}" CommandParameter="{Binding Movie}" Text="+" TextColor="Yellow" HeightRequest="35" WidthRequest="35" CornerRadius="5" FontSize="25" FontAttributes="Bold" Margin="18" VerticalOptions="Start" Padding="0" BackgroundColor="Transparent" BorderColor="Yellow" BorderWidth="1" />
+                    <Button x:Name="WatchListOperationsButton" Grid.Column="2" Command="{Binding AddWatchListCommand}" CommandParameter="{Binding Movie}" Text="+" TextColor="Yellow" HeightRequest="35" WidthRequest="35" CornerRadius="5" FontSize="25" FontAttributes="Bold" Margin="18" VerticalOptions="Start" Padding="0" BackgroundColor="Transparent" BorderColor="Yellow" BorderWidth="1" />
                 </Grid>
             </StackLayout>
             <Label Margin="5, 10, 5, 5" HorizontalOptions="Center" FontSize="18" FontAttributes="Bold">
